# src/controllers/routes/registerRoute.ts
@@ -1,7 +1,6 @@
 import { Application } from 'express';
-import { registerUser, getUserById } from '../userController';
+import { registerUser } from '../userController';
 
 export const registerRoute = (app: Application): void => {
-    app.post('/api/register', registerUser);
-    app.get('/api/users/:userId', getUserById);
+    app.post('/api/register', registerUser);    
 };
