# src/controllers/routes/userRoute.ts
@@ -1,0 +1,6 @@
+import { Application } from "express";
+import { getUserById } from '../userController';
+
+export const userRoute = (app: Application): void => {    
+    app.get('/api/users/:userId', getUserById);
+};
