# swagger/auth.json
@@ -1,51 +1,39 @@
 {
     "paths": {
-        "/api/register": {
+        "/api/login": {
             "post": {
                 "tags": [
-                    "Users"
+                    "Login"
                 ],
-                "summary": "Register a user",
-                "operationId": "registerUser",
+                "summary": "Login a user",
+                "operationId": "loginUser",
                 "requestBody": {
-                    "description": "User registration data",
+                    "description": "User login data",
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
                                 "type": "object",
                                 "properties": {
-                                    "username": {
-                                        "type": "string"
-                                    },
-                                    "email": {
-                                        "type": "string"
-                                    },
-                                    "wallet": {
-                                        "type": "string"
+                                    "identifier": {
+                                        "type": "string",
+                                        "description": "Can be username, email, or wallet"
                                     },
                                     "password": {
                                         "type": "string"
-                                    },
-                                    "balance": {
-                                        "type": "number",
-                                        "format": "float"
                                     }
                                 },
                                 "required": [
-                                    "username",
-                                    "email",
-                                    "wallet",
-                                    "password",
-                                    "balance"
+                                    "identifier",
+                                    "password"
                                 ]
                             }
                         }
                     }
                 },
                 "responses": {
-                    "201": {
-                        "description": "User registered successfully",
+                    "200": {
+                        "description": "User logged in successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -97,8 +85,23 @@
                             }
                         }
                     },
-                    "400": {
-                        "description": "Bad request",
+                    "401": {
+                        "description": "Invalid credentials",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "User not found",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -115,25 +118,13 @@
                 }
             }
         },
-        "/api/users/{userId}": {
+        "/api/user": {
             "get": {
                 "tags": [
-                    "Users"
+                    "Login"
                 ],
-                "summary": "Get a user by ID",
-                "operationId": "getUserById",
-                "parameters": [
-                    {
-                        "name": "userId",
-                        "in": "path",
-                        "description": "User ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
+                "summary": "Get logged-in user",
+                "operationId": "getLoggedInUser",
                 "responses": {
                     "200": {
                         "description": "User found",
@@ -142,56 +133,74 @@
                                 "schema": {
                                     "type": "object",
                                     "properties": {
-                                        "properties": {
-                                            "id": {
-                                                "type": "integer",
-                                                "format": "int64"
+                                        "user": {
+                                            "type": "object",
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "format": "int64"
+                                                },
+                                                "username": {
+                                                    "type": "string"
+                                                },
+                                                "email": {
+                                                    "type": "string"
+                                                },
+                                                "wallet": {
+                                                    "type": "string"
+                                                },
+                                                "registrationDate": {
+                                                    "type": "string",
+                                                    "format": "date-time"
+                                                },
+                                                "password": {
+                                                    "type": "string"
+                                                },
+                                                "balance": {
+                                                    "type": "number",
+                                                    "format": "float"
+                                                }
                                             },
-                                            "username": {
-                                                "type": "string"
-                                            },
-                                            "email": {
-                                                "type": "string"
-                                            },
-                                            "wallet": {
-                                                "type": "string"
-                                            },
-                                            "registrationDate": {
-                                                "type": "string",
-                                                "format": "date-time"
-                                            },
-                                            "password": {
-                                                "type": "string"
-                                            },
-                                            "balance": {
-                                                "type": "number",
-                                                "format": "float"
-                                            }
-                                        },
-                                        "required": [
-                                            "id",
-                                            "username",
-                                            "email",
-                                            "wallet",
-                                            "registrationDate",
-                                            "password",
-                                            "balance"
-                                        ]
+                                            "required": [
+                                                "id",
+                                                "username",
+                                                "email",
+                                                "wallet",
+                                                "registrationDate",
+                                                "password",
+                                                "balance"
+                                            ]
+                                        }
                                     }
                                 }
                             }
                         }
-                    }
-                },
-                "404": {
-                    "description": "User not found",
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "message": {
-                                        "type": "string"
+                    },
+                    "401": {
+                        "description": "Not logged in",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "User not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
                                     }
                                 }
                             }
